fixed scale problem covering uncap added Summon

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -8,6 +8,7 @@ body {
     box-shadow: 3px 3px 5px 6px gray;
     background-color: #057852;
     background-image: url("https://www.transparenttextures.com/patterns/nice-snow.png");
+    margin-right: 5%;
     /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
@@ -26,26 +27,35 @@ body {
     box-shadow: 1px 1px 2px 3px #024932;
 }
 
+.mWeapon:hover .mWeapon-img {
+    opacity: 0.5;
+  }
+
 .subGrid {
     position: relative;
     display: inline-block;
 }
 
 .subWeapon {
-    height: 3.4rem;
     position: relative;
     display: inline-block;
     border-radius: 0;
-    padding: 1%;
-    margin-top: 5%;
-    box-sizing: none;
+    padding: 2%;
     vertical-align: top;
 }
 
+.subWeapon:hover .subWeapon-img {
+    opacity: 0.5;
+  }
+
 .subWeapon-img {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: relative;
-    bottom: 20%;
+    line-height: 1.5rem;
     box-shadow: 1px 1px 2px 3px #024932;
+}
+
+.content {
+    padding: 5%;
 }
